# hfs3

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  copilot-instructions.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
spec/: plan.yaml  scope.md
spec/contracts/: agent_io.proto
src/: cli.rs  concurrency.rs  config.rs  docker.rs  error.rs  hf.rs  lib.rs  main.rs  pipeline.rs  s3.rs  stats.rs  types.rs  xet.rs
src/hfs3/: cli.py  config.py  docker.py  hf.py  s3.py
tests/: smoke.rs  test_config.py  test_docker.py  test_hf.py  test_s3.py
