[project]
name = "hfs3"
version = "0.1.0"
description = "Mirror HuggingFace repos and spaces to S3 for air-gapped deployment"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "huggingface-hub>=0.25",
]

[project.scripts]
hfs3 = "hfs3.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hfs3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
